# growatt-devices-monitor

./: .dockerignore  .env  .env.local  .gitignore  .sync.lock.time  Dockerfile  Dockerfile.local  Procfile  README-SVG-MAPS.md  README-docker.md  README-nginx.md  README.md  README_CRON.md  config.py  data_sync.py  debug_plants_data.json  docker-compose.db.yml  docker-compose.yml  fix_database_report.py  fix_database_schema.py  fix_email.py  fix_email_handling.py  improved_email_handling.py  koyeb.yaml  notification_history_method.py  pyproject.toml  railway.json  readme.md  requirements.txt  run_database_report.py  run_dev.sh  setup_cron.py  simple_fix.py  telegram_setup.py  test_jobs.sqlite  test_list_recipient.py  test_postgres_scheduler.py  test_scheduled_jobs.py  test_telegram.py  test_timezone_execution.py  (+3 more)
.github/workflows/: collect_devices_data.yml  collect_devices_improved.yml  cornjob_data.yml  data_collection.yml  main.yml  (+7 more)
app/: __init__.py  azure_keyvault.py  azure_monitoring.py  azure_storage.py  cache_utils.py  config.py  data_collector.py  database.py  db.py  db_migration.py  example_usage.py  main.py  register_routes.py  requirements.txt  routes.py  services.py  timezone_utils.py  utils.py
data/: devices_20250511_145749.json  devices_20250514_225506.json
db_analysis/: database_structure.txt  table_relationships.txt
doc/: ARCHITECTURE.md  DATABASE_REPORT.md  DEVICE_COLLECTION.md  INDEX-ML_prediction.md  INDEX_System.md  Index-calculate.md  README-notifications.md  README_CRON.md  TELEGRAM_NOTIFICATIONS.md  export_to_pdf.py  index.md  readme.md
nginx/: growatt-api.conf
script/: check_background_service.py  collect_all_data.py  collect_inverter_data.py  device_notification.py  device_status_service.py  devices_collector.py  devices_data_collector.py  offline_devices_notification.py  plants_data_collector.py  run_app_with_services.py  run_example.sh  run_sync.sh  send_offline_device_notifications.py  setup_cron.py  setup_device_status_cron.py  setup_devices_cron.py  setup_plants_cron.py  test_jobs.sqlite
scripts/: README.md  __init__.py  db_visualizer.py  diagnostics.py  energy_report.py  organize_scripts.py  run_all_collectors.sh  run_devices_collector.sh  setup_devices_cron.sh
test/: example_usage.py  routes.txt
tests/: fix_datetime_timezone.py  fix_db_schema.py  fix_timezone_awareness.py  list_scheduled_jobs.py  test_data_collector.py  test_data_sync.py  test_devices_collector.py  test_growatt_api.py  test_telegram_features.py  test_timezone.py  verify_timezone.py
(+298 files in other folders)
