[project]
name = "growatt-devices-monitor"
version = "0.1.0"
description = "A monitoring tool for Growatt solar devices that collects and displays performance data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "blinker>=1.9.0",
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "click>=8.1.8",
    "crontab>=1.0.4",
    "flask>=3.1.0",
    "flask-caching>=2.3.1",
    "flask-cors>=5.0.1",
    "gunicorn>=21.2.0",
    "idna>=3.10",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "joblib>=1.4.2",
    "markdown>=3.8",
    "markupsafe>=3.0.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "psycopg2-binary>=2.9.10",
    "python-crontab>=3.2.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "six>=1.17.0",
    "threadpoolctl>=3.6.0",
    "tzdata>=2025.2",
    "urllib3>=2.4.0",
    "weasyprint>=65.1",
    "werkzeug>=3.1.3",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]

[tool.setuptools]
packages = ["app", "app.core", "app.models", "app.routes", "app.services", "app.ml", "app.views"]

[tool.setuptools.package-data]
app = ["static/**/*", "templates/**/*"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
